The Donate button now aligns correctly

--- a/app/assets/stylesheets/listings.css.scss
+++ b/app/assets/stylesheets/listings.css.scss
@@ -438,7 +438,6 @@ li.date_row {
   }
   form {
     float: left;
-    margin-left: 10px;
     .donate_button {
       background-color: #EF4836;
       color: white;
